# notion-starter

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  IA.md  QUALIDADE.md  README.md  pyproject.toml
examples/: check_schema.py  coletar_mapa.py  export_rows.py  gerar_arvore_html.py  gerenciar_tarefas.py  listar_paginas.py  sync_from_csv.py
src/notion_starter/: __init__.py  client.py  constants.py  content.py  exceptions.py  inventory.py  logging.py  properties.py  readers.py  schema.py  tasks.py  utils.py  valores_br.py
src/notion_starter/services/: anexos.py  conteudo.py  estrutura_projeto.py  ia.py  importacao.py  ingestao.py  inventario_github.py  projetos.py  relatorios_docx.py  reordenacao.py  schema.py  sincronizar_github.py
tests/: conftest.py  test_anexos.py  test_client.py  test_client_resiliencia.py  test_content.py  test_fonte_planilha.py  test_importacao.py  test_inventory.py  test_properties.py  test_readers.py  test_schema.py  test_services_estrutura_projeto.py  test_services_relatorios_docx.py  test_services_reordenacao.py  test_services_schema.py  test_tasks.py  test_valores_br.py
