[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-starter"
version = "0.1.0"
description = "Biblioteca Python para operar a API oficial do Notion: cliente resiliente, schema, tarefas, conteúdo e inventário."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Felipe Alcantara" }]
keywords = ["notion", "notion-api", "automation", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.25",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/Felipe-Alcantara/notion-starter"
Repository = "https://github.com/Felipe-Alcantara/notion-starter"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_starter"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
